# benchmark-operator

./: .bash_eternal_history  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CI.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT  README.md  common.sh  full_test.sh  max-namespaces.yml  playbook.yml  pytest.ini  requirements.yml  run_test.sh  temp_addition  test.sh  wait_for_daemonset.py  watches.yaml
.github/: stale.yml
CI/: README.md  common.sh  test_byowl.sh  test_couchbase.sh  test_fio.sh  test_fiod.sh  test_iperf3.sh  test_sysbench.sh  test_uperf.sh  test_ycsb-couchbase.sh
cli/: .coveragerc  .flake8  .pylintrc  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
cli/ripsaw/: cli.py
cli/ripsaw/clients/: elastic.py  k8s.py
cli/ripsaw/commands/: benchmark.py  operator.py
cli/ripsaw/models/: benchmark.py  workload.py
cli/ripsaw/resources/: byowl.yaml  fs_drift.yaml  log-generator.yaml  stressng.yaml  uperf.yaml
cli/ripsaw/util/: exceptions.py  logging.py
cli/tests/: conftest.py
cli/tests/clients/: test_elastic.py  test_k8s.py
cli/tests/commands/: test_benchmark_commands.py  test_operator_commands.py
cli/tests/models/: test_benchmark.py  test_workload.py
cli/tests/resources/: benchmark.yaml  job.yaml
deploy/: 10_service_account.yaml  20_role.yaml  25_role.yaml  30_role_binding.yaml  35_role_binding.yaml  40_cluster_role.yaml  40_cluster_role_kubevirt.yaml  41_cluster_role.yaml  50_cluster_role_binding.yaml  50_pod_security_policy.yml  README.md  (+10 more)
(+993 files in other folders)
